# rznode

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/web_app/: CMakeLists.txt  run_server.cpp  run_server_oatpp.cpp
applications/web_app/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
applications/web_app/web/src/: App.vue  App_clean.vue  App_old.vue  main.js  main.ts
applications/web_app/web/src/api/: geometry-websocket.ts  rznode-api.js  rznode-api.ts
applications/web_app/web/src/config/: index.ts
applications/web_app/web/src/pages/: GeometryVisualizer.vue  NodeEditor.vue
applications/web_app/web/src/router/: index.ts
applications/web_app/web/src/stores/: geometryStore.ts  globalStores.ts  valueTypeStores.ts
applications/web_app/web/src/styles/: global.css
applications/web_app/web/src/utils/: logFormatter.ts  nodeConverter.js  nodeConverter.ts  nodeTreeSerializer.js  nodeTreeSerializer.ts  threeJSRenderer.ts  valueTypeRegistrant.ts
applications/web_app/web_test_nodes/: node_create_geom.cpp  node_send_geom.cpp
cmake/: AddLibrary.cmake  AddNodes.cmake  nodes_json.py
core/: CMakeLists.txt  api.cpp  logging.cpp  node.cpp  node_exec.cpp  node_exec_eager.cpp  node_exec_python.cpp  node_socket.cpp  node_tree.cpp
core/include/nodes/core/: api.h  api.hpp  id.hpp  logging.hpp  node.hpp  node_exec.hpp  node_exec_eager.hpp  node_exec_python.hpp  node_link.hpp  node_tree.hpp  socket.hpp
core/include/nodes/core/def/: node_def.hpp
core/include/nodes/core/io/: json_fwd.hpp
core/include/nodes/core/math/: vec.hpp
core/python/: nodes_core.cpp
core/tests/: benchmark_cpp_baseline.cpp  nodes_core.cpp  nodes_core.py  nodes_exec.cpp  socket_group_bugs.cpp
python/: geometry_helpers.py  ruzino_graph.py
system/: CMakeLists.txt
system/include/nodes/system/: api.h  node_system.hpp  node_system_dl.hpp
system/python/: nodes_system.cpp
system/src/: node_system.cpp  node_system_dl.cpp
system/tests/: CMakeLists.txt  conftest.py  node_system.cpp  node_system.py  simple_example.py  test_registered_nodes.py
system/tests/test_node/: node_print.cpp  node_storage.cpp
tests/: .gitignore  README.md  benchmark_wrapper_overhead.py  conftest.py  generated_complex_graph.py  generated_from_json.py  generated_geometry_graph.py  generated_test_exec.py  geometry_graph_examples.py  geometry_graph_export.json  graph_export.json  test_config_tracking.py  test_geometry_graph.py  test_node_system.py  test_python_code_gen.py  test_run_generated.py  test_run_generated_from_json.py  test_run_generated_geometry.py  test_ruzino_graph.py
ui_imgui/: CMakeLists.txt
ui_imgui/include/nodes/ui/: api.h  imgui.hpp  node_editor_widget_base.hpp
ui_imgui/source/: node_editor_widget_base.cpp  ui_imgui.cpp  ui_imgui.hpp
ui_imgui/tests/: node_ui.cpp
web_server/: API.md  API_DOCUMENTATION.md  CMakeLists.txt  WEBSOCKET_USAGE.md  websocket_test.html
web_server/geom_extension/include/nodes/web_server/: geom_dto.hpp  geom_utils.hpp
web_server/include/nodes/web_server/: api.h  api_controller.hpp  dto.hpp  util.hpp  web_server.hpp
web_server/src/: geom_utils.cpp  geom_ws_listener.cpp  util.cpp  web_server.cpp
web_server/tests/: README.md  web_server.cpp
web_server/web/: package.json
web_server/web/src/: App.vue
web_server_oatpp/: API.md  CMakeLists.txt  WEBSOCKET_USAGE.md  websocket_test.html
web_server_oatpp/geom_extension/include/nodes/web_server_oatpp/: geom_dto.hpp  geom_utils.hpp  geom_websocket.hpp  geom_ws_listener.hpp
web_server_oatpp/include/nodes/web_server_oatpp/: api.h  api_controller.hpp  dto.hpp  util.hpp  web_server_oatpp.hpp  wslistener.hpp
web_server_oatpp/src/: geom_utils.cpp  geom_websocket.cpp  geom_ws_listener.cpp  util.cpp  web_server_oatpp.cpp  wslistener.cpp
